--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <img class="corePixel" src="assets/coree.png" alt="" />
       <img class="gatinhoBravo disable" src="assets/bebe.jpg" alt="" />
       <h1 class="title">Can I take you out on Valentine's Day?</h1>
-      <h2 class="jasna">MJ</h2>
+      <h2 class="jasna">Francine<br><<br>Jelaine</h2>
       <div class="btns">
         <button class="btnYes vibrate-1">Yes</button>
         <button class="btnNo vibrate-1" onmouseover="desvia(this)">No</button>
